Overflow fix

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -44,6 +44,7 @@ body {
 
   /* No flex gap */
   width: 100%;
+  overflow-y: auto;
 }
 
 
